<resources>
    <string name="app_name">WLEARNapp</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="etEmail">Email</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>
    <string name="search_hint">Search by topic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
